# project1

./: .env.example  .gitignore  serve_frontend.py
backend/: pyproject.toml  test_llm_integration.py  test_websocket.py
backend/app/: main.py
backend/app/agents/: graph.py
backend/app/api/: endpoints.py
backend/app/core/: config.py
backend/app/services/: llm_factory.py  snowflake_service.py
backend/database/: init_mock_db.py  mock_snowflake.db
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  Dashboard.jsx
frontend_simple/: index.html
