[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Multi-Agent Data Analytics Platform Backend"
authors = ["AntiGravity"]
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
websockets = "^12.0"
langchain = "^0.2.0"
langgraph = "^0.2.0"
langchain-aws = "^0.1.0"
langchain-community = "^0.2.0"
pandas = "^2.2.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
pydantic-settings = "^2.0.0"

python-dotenv = "^1.0.0"
requests = "^2.31.0"
langchain-anthropic = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
